@@ -86,6 +86,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.80</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -105,7 +109,16 @@
                     <finalName>cloudterm</finalName>
                 </configuration>
             </plugin>
-<!--            <plugin>-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>16</source>
+                    <target>16</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <!--            <plugin>-->
 <!--                <groupId>com.google.cloud.tools</groupId>-->
 <!--                <artifactId>jib-maven-plugin</artifactId>-->
 <!--                <version>3.1.4</version>-->
